FieldsLinker : some css to align the canvas zone with the html lists (that's the issue when mixing both techs) BootstrapSelect : changing .text() to .html() to allow to put some html in the names ex :  &nbsp; or <b>Hello !</b>

--- a/bootstrapSelect.css
+++ b/bootstrapSelect.css
@@ -1,4 +1,4 @@
-.bs-select ul {
+﻿.bs-select ul {
     white-space: nowrap;
 }
 
